# whiskey-ml

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ruff.yml
dev/: Dockerfile  plot_model_results.R  requirements.txt
devops/: Dockerfile  Dockerfile.dataproc  init_nltk.sh  write_nltk_to_gcs.py
infra/: README.md  buckets.tf  cluster.tf  main.tf
infra/artifact_registry/: repository.tf
infra/cloud_storage/: buckets.tf
infra/dataproc/: cluster.tf
src/: .gitignore  dbt_project.yml  profiles.yml
src/analytics/: .user.yml  dbt_project.yml  profiles.yml
src/analytics/macros/: flavor_categories.sql  standard_styles.sql  string_to_array.sql
src/analytics/models/production/: prd__clean.sql
src/analytics/models/production/machine_learning/: ml__clusters.py  ml__rating_predictions.py  ml__semantic_analysis.py
src/analytics/models/staging/: _source.yml  _staging.yml  stg__feature_selection.py  stg__metadata.sql  stg__setup.sql
src/macros/: filter_ratings.sql  flavor_categories.sql
src/models/production/: prd__analytics.py  prd__clean.sql
src/models/staging/: _source.yml  _staging.yml  stg__analytics.py  stg__feature_selection.py  stg__long.sql  stg__metadata.sql  stg__setup.sql  stg__training.py
src/plot_source_code/: plot_3d_scatterplot.py  plot_model_results.R  run_all_plots.py
src/service_accounts/: ian_dev.json
